@@ -1,131 +1,224 @@
 package com.app.backend.trade.lstm;
 
+import com.app.backend.trade.model.TradeStylePrediction;
 import org.deeplearning4j.nn.multilayer.MultiLayerNetwork;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.Mockito;
+import org.ta4j.core.Bar;
 import org.ta4j.core.BarSeries;
 import org.ta4j.core.BaseBarSeriesBuilder;
-import org.nd4j.linalg.api.ndarray.INDArray;
-import org.nd4j.linalg.factory.Nd4j;
+import org.ta4j.core.num.DecimalNum;
+
 import java.time.ZonedDateTime;
-import java.util.Collections;
+import java.util.List;
+
 import static org.junit.jupiter.api.Assertions.*;
 
-public class LstmTradePredictorTest {
-    @Test
-    public void testPredictNextCloseScalarV2_LogReturn() {
-        // Création d'une série temporelle simple
-        BarSeries series = new BaseBarSeriesBuilder().withName("test").build();
-        ZonedDateTime now = ZonedDateTime.now();
-        series.addBar(now.minusMinutes(5), 100d, 105d, 95d, 100d, 1000d);
-        series.addBar(now.minusMinutes(4), 102d, 107d, 101d, 102d, 1000d);
-        series.addBar(now.minusMinutes(3), 104d, 108d, 103d, 104d, 1000d);
-        series.addBar(now.minusMinutes(2), 106d, 110d, 105d, 106d, 1000d);
-        series.addBar(now.minusMinutes(1), 108d, 112d, 107d, 108d, 1000d);
-        series.addBar(now, 110d, 115d, 109d, 110d, 1000d);
+class LstmTradePredictorTest {
+    private LstmTradePredictor predictor;
+    private LstmConfig config;
+    private MultiLayerNetwork model;
+    private LstmTradePredictor.ScalerSet scalers;
 
-        // Mock du modèle LSTM pour retourner une valeur fixe (log-return normalisé = 0.05)
-        MultiLayerNetwork model = Mockito.mock(MultiLayerNetwork.class);
-        INDArray fakeOutput = Nd4j.create(new double[]{0.05});
-        Mockito.when(model.output(Mockito.any(INDArray.class))).thenReturn(fakeOutput);
-
-        // Scalers: feature identité + label ZScore identité (mean=0,std=1) => pas de migration
-        LstmTradePredictor.ScalerSet scalers = new LstmTradePredictor.ScalerSet();
-        scalers.featureScalers = Collections.singletonMap("close", new IdentityScaler());
-        scalers.labelScaler = new ZScoreIdentityScaler();
-
-        // Configuration LSTM
-        LstmConfig config = new LstmConfig();
-        config.setFeatures(Collections.singletonList("close"));
-        config.setWindowSize(3);
+    @BeforeEach
+    void setUp() {
+        predictor = new LstmTradePredictor(null, null);
+        config = new LstmConfig();
+        config.setWindowSize(5);
+        config.setFeatures(List.of("close", "rsi"));
+        config.setThresholdAtrMin(0.001);
+        config.setThresholdAtrMax(0.02);
+        config.setRsiOverboughtLimit(70);
+        config.setVolumeMinRatio(0.5);
+        config.setAggressivenessBoost(1.0);
+        config.setEntryPercentileQuantile(0.8);
+        config.setEntryDeltaFloor(0.001);
+        config.setEntryOrLogic(true);
         config.setUseLogReturnTarget(true);
-        config.setLimitPredictionPct(0.2); // Limite à ±20%
-
-        // Mock des dépendances du constructeur
-        LstmHyperparamsRepository repo = Mockito.mock(LstmHyperparamsRepository.class);
-        org.springframework.jdbc.core.JdbcTemplate jdbc = Mockito.mock(org.springframework.jdbc.core.JdbcTemplate.class);
-        LstmTradePredictor predictor = new LstmTradePredictor(repo, jdbc);
-        double predicted = predictor.predictNextCloseScalarV2(series, config, model, scalers);
-
-        double expected = 110 * Math.exp(0.05); // log-return direct car mean=0,std=1
-        assertEquals(expected, predicted, 1e-6);
+        config.setHorizonBars(1);
+        config.setCapital(10000);
+        config.setRiskPct(0.01);
+        config.setBusinessProfitFactorCap(3.0);
+        config.setBusinessDrawdownGamma(1.0);
+        // SUPPRESSION: Mock minimal model
+        // model = new MultiLayerNetwork(null);
+        // model.init();
+        // Mock scalers
+        scalers = new LstmTradePredictor.ScalerSet();
+        scalers.featureScalers.put("close", new LstmTradePredictor.FeatureScaler(LstmTradePredictor.FeatureScaler.Type.MINMAX));
+        scalers.featureScalers.put("rsi", new LstmTradePredictor.FeatureScaler(LstmTradePredictor.FeatureScaler.Type.ZSCORE));
+        scalers.labelScaler = new LstmTradePredictor.FeatureScaler(LstmTradePredictor.FeatureScaler.Type.ZSCORE);
     }
 
-    @Test
-    public void testLabelScalerMigrationMinMaxToZScore() {
-        // Série avec variations de log-return pour éviter std=0
-        BarSeries series = new BaseBarSeriesBuilder().withName("test-mig").build();
+    private BarSeries createSeries(double[] closes, double[] volumes) {
+        BarSeries series = new BaseBarSeriesBuilder().withName("TEST").build();
         ZonedDateTime now = ZonedDateTime.now();
-        // 10 barres avec variations non uniformes
-        series.addBar(now.minusMinutes(9), 100d, 101d, 99d, 100d, 1000d);
-        series.addBar(now.minusMinutes(8), 101d, 102d, 100d, 101d, 1000d);
-        series.addBar(now.minusMinutes(7), 102d, 103d, 101d, 102d, 1000d);
-        series.addBar(now.minusMinutes(6), 104d, 105d, 103d, 104d, 1000d);
-        series.addBar(now.minusMinutes(5), 103d, 104d, 102d, 103d, 1000d);
-        series.addBar(now.minusMinutes(4), 107d, 108d, 106d, 107d, 1000d);
-        series.addBar(now.minusMinutes(3), 108d, 109d, 107d, 108d, 1000d);
-        series.addBar(now.minusMinutes(2), 109d, 110d, 108d, 109d, 1000d);
-        series.addBar(now.minusMinutes(1), 113d, 114d, 112d, 113d, 1000d);
-        series.addBar(now,                112d, 113d, 111d, 112d, 1000d);
-
-        // Config log-return + fenêtre
-        LstmConfig config = new LstmConfig();
-        config.setFeatures(Collections.singletonList("close"));
-        config.setWindowSize(3);
-        config.setUseLogReturnTarget(true);
-        config.setUseMultiHorizonAvg(false);
-
-        // Scalers factices avec labelScaler MINMAX (ancien format à migrer)
-        LstmTradePredictor.ScalerSet scalers = new LstmTradePredictor.ScalerSet();
-        IdentityScaler id = new IdentityScaler();
-        scalers.featureScalers = Collections.singletonMap("close", id);
-        LstmTradePredictor.FeatureScaler oldLabel = new LstmTradePredictor.FeatureScaler(LstmTradePredictor.FeatureScaler.Type.MINMAX);
-        // Simule ancien fit
-        oldLabel.min = -0.01; oldLabel.max = 0.02; // plage étroite => compression
-        scalers.labelScaler = oldLabel;
-
-        // Modèle mock
-        MultiLayerNetwork model = Mockito.mock(MultiLayerNetwork.class);
-        // Sortie normalisée arbitraire (ne sert pas au test de migration lui-même)
-        Mockito.when(model.output(Mockito.any(INDArray.class))).thenReturn(Nd4j.create(new double[]{0.0}));
-
-        LstmHyperparamsRepository repo = Mockito.mock(LstmHyperparamsRepository.class);
-        org.springframework.jdbc.core.JdbcTemplate jdbc = Mockito.mock(org.springframework.jdbc.core.JdbcTemplate.class);
-        LstmTradePredictor predictor = new LstmTradePredictor(repo, jdbc);
-
-        // Appel prédiction -> doit déclencher migration vers ZSCORE
-        predictor.predictNextCloseScalarV2(series, config, model, scalers);
-
-        assertNotNull(scalers.labelScaler, "Label scaler doit être présent après migration");
-        assertEquals(LstmTradePredictor.FeatureScaler.Type.ZSCORE, scalers.labelScaler.type, "Le label scaler doit être converti en ZSCORE");
-
-        // Recalcule manuel des log-returns pour vérifier std ≈ 1 après transform
-        double[] closes = new double[series.getBarCount()];
-        for (int i = 0; i < closes.length; i++) closes[i] = series.getBar(i).getClosePrice().doubleValue();
-        int windowSize = config.getWindowSize();
-        int numSeq = closes.length - windowSize - 1; if (numSeq < 1) numSeq = closes.length - 1;
-        double[] labelSeq = new double[Math.max(0, numSeq)];
-        for (int i = 0; i < labelSeq.length; i++) {
-            double prev = closes[i + windowSize - 1];
-            double next = closes[i + windowSize];
-            labelSeq[i] = Math.log(next / prev);
+        for (int i = 0; i < closes.length; i++) {
+            Bar bar = new org.ta4j.core.BaseBar(
+                java.time.Duration.ofMinutes(1),
+                now.plusMinutes(i),
+                String.valueOf(closes[i]), // open
+                String.valueOf(closes[i]), // high
+                String.valueOf(closes[i]), // low
+                String.valueOf(closes[i]), // close
+                String.valueOf(volumes[i]) // volume
+            );
+            series.addBar(bar);
         }
-        double[] norm = scalers.labelScaler.transform(labelSeq);
-        double mean = 0, var = 0; int n = norm.length; for(double v: norm) mean += v; mean = n>0? mean/n:0; for(double v: norm) var += (v-mean)*(v-mean); var = n>0? var/n:0; double std = Math.sqrt(var);
-        assertTrue(std > 1e-3, "Std normalisée ne doit pas être < 1e-3 (plateau)");
-        assertTrue(Math.abs(std - 1.0) < 1e-3, "Std après ZScore doit être ≈ 1 (std="+std+")");
+        return series;
     }
 
-    // Implémentation d'un scaler identité pour le test
-    static class IdentityScaler extends LstmTradePredictor.FeatureScaler {
-        public IdentityScaler() { super(Type.MINMAX); }
-        @Override public double[] transform(double[] values) { return values; }
-        @Override public double inverse(double value) { return value; }
+    @Test
+    void testInsufficientSeries() {
+        BarSeries series = createSeries(new double[]{100, 101, 102}, new double[]{1000, 1000, 1000});
+        TradeStylePrediction pred = predictor.predictTradeStyle("TEST", series, config, null, scalers);
+        assertEquals("insuffisant", pred.comment);
+        assertEquals(pred.lastClose, pred.predictedClose);
+        assertEquals("STABLE", pred.tendance);
+        assertEquals("HOLD", pred.action);
     }
-    static class ZScoreIdentityScaler extends LstmTradePredictor.FeatureScaler {
-        public ZScoreIdentityScaler() { super(Type.ZSCORE); this.mean = 0.0; this.std = 1.0; }
-        @Override public void fit(double[] data) { /* no-op */ }
-        @Override public double[] transform(double[] values) { return values; }
-        @Override public double inverse(double value) { return value; }
+
+    @Test
+    void testModelAndScalersNull() {
+        BarSeries series = createSeries(new double[]{100, 101, 102, 103, 104, 105, 106}, new double[]{1000, 1000, 1000, 1000, 1000, 1000, 1000});
+        TradeStylePrediction pred = predictor.predictTradeStyle("TEST", series, config, null, null);
+        assertTrue(pred.comment.contains("Modèle ou scalers reconstruits"));
+    }
+
+    @Test
+    void testPredictionUp() {
+        BarSeries series = createSeries(new double[]{100, 101, 102, 103, 104, 110, 115}, new double[]{1000, 1000, 1000, 1000, 1000, 1000, 1000});
+        TradeStylePrediction pred = predictor.predictTradeStyle("TEST", series, config, null, scalers);
+        assertEquals("UP", pred.tendance);
+        assertTrue(pred.action.equals("BUY") || pred.action.equals("HOLD"));
+    }
+
+    @Test
+    void testPredictionDown() {
+        BarSeries series = createSeries(new double[]{120, 119, 118, 117, 116, 110, 105}, new double[]{1000, 1000, 1000, 1000, 1000, 1000, 1000});
+        TradeStylePrediction pred = predictor.predictTradeStyle("TEST", series, config, null, scalers);
+        assertTrue(pred.tendance.equals("DOWN") || pred.tendance.equals("STABLE"));
+        assertTrue(pred.action.equals("SELL") || pred.action.equals("HOLD"));
+    }
+
+    @Test
+    void testPredictionStable() {
+        BarSeries series = createSeries(new double[]{100, 100, 100, 100, 100, 100, 100}, new double[]{1000, 1000, 1000, 1000, 1000, 1000, 1000});
+        TradeStylePrediction pred = predictor.predictTradeStyle("TEST", series, config, null, scalers);
+        assertEquals("STABLE", pred.tendance);
+        assertEquals("HOLD", pred.action);
+    }
+
+    @Test
+    void testContrarianCase() {
+        BarSeries series = createSeries(new double[]{100, 99, 98, 97, 96, 95, 94, 93, 92, 91, 90}, new double[]{1000, 1000, 1000, 1000, 1000, 1000, 1000, 1000, 1000, 1000, 1000});
+        TradeStylePrediction pred = predictor.predictTradeStyle("TEST", series, config, null, scalers);
+        assertTrue(pred.contrarianAdjusted || pred.tendance.equals("DOWN"));
+    }
+
+    @Test
+    void testPredictionEqualsLastClose() {
+        BarSeries series = createSeries(new double[]{100, 101, 102, 103, 104, 105, 105}, new double[]{1000, 1000, 1000, 1000, 1000, 1000, 1000});
+        TradeStylePrediction pred = predictor.predictTradeStyle("TEST", series, config, null, scalers);
+        assertTrue(pred.comment.contains("identique au dernier close"));
+    }
+
+    @Test
+    void testExtremeATR() {
+        BarSeries series = createSeries(new double[]{100, 120, 80, 130, 70, 140, 60}, new double[]{1000, 1000, 1000, 1000, 1000, 1000, 1000});
+        TradeStylePrediction pred = predictor.predictTradeStyle("TEST", series, config, null, scalers);
+        assertTrue(pred.atrPct > config.getThresholdAtrMax() || pred.atrPct < config.getThresholdAtrMin());
+    }
+
+    @Test
+    void testLowVolume() {
+        BarSeries series = createSeries(new double[]{100, 101, 102, 103, 104, 105, 106}, new double[]{100, 100, 100, 100, 100, 100, 100});
+        TradeStylePrediction pred = predictor.predictTradeStyle("TEST", series, config, null, scalers);
+        assertTrue(pred.volumeRatio < 0.7);
+    }
+
+    @Test
+    void testComplexReturnValues() {
+        BarSeries series = createSeries(
+                new double[]{100, 105, 110, 120, 130, 140, 150, 160, 170, 180, 190},
+                new double[]{1000, 2000, 1500, 3000, 2500, 4000, 3500, 5000, 4500, 6000, 5500}
+        );
+        TradeStylePrediction pred = predictor.predictTradeStyle("TEST", series, config, null, scalers);
+        assertEquals("TEST", pred.symbol);
+        assertTrue(pred.lastClose > 0);
+        assertTrue(pred.predictedClose > 0);
+        assertTrue(pred.deltaPct >= -1 && pred.deltaPct <= 1);
+        assertNotNull(pred.tendance);
+        assertNotNull(pred.action);
+        assertTrue(pred.atrPct >= 0);
+        assertTrue(pred.rsi >= 0 && pred.rsi <= 100);
+        assertTrue(pred.volumeRatio >= 0);
+        assertTrue(pred.thresholdAtrAdaptive >= 0);
+        assertTrue(pred.percentileThreshold >= 0 && pred.percentileThreshold <= 1);
+        assertTrue(pred.signalStrength >= -1 && pred.signalStrength <= 1);
+        assertNotNull(pred.comment);
+        // Vérifie les filtres
+        assertEquals(pred.rsi > config.getRsiOverboughtLimit() || pred.rsi < 30, pred.rsiFiltered);
+        assertEquals(pred.volumeRatio < config.getVolumeMinRatio(), pred.volumeFiltered);
+        assertEquals(pred.contrarianReason != null && !pred.contrarianReason.isEmpty(), pred.contrarianAdjusted);
+        // Vérifie la logique d'entrée
+        assertEquals(config.isEntryOrLogic(), pred.entryLogicOr);
+        // Vérifie l'agressivité
+        assertEquals(config.getAggressivenessBoost(), pred.aggressivenessBoost);
+        // Vérifie la taille de fenêtre
+        assertEquals(config.getWindowSize(), pred.windowSize);
+    }
+
+    @Test
+    void testExtremeSignalStrengthAndPercentile() {
+        BarSeries series = createSeries(
+                new double[]{100, 200, 300, 400, 500, 600, 700, 800, 900, 1000, 1100},
+                new double[]{10000, 10000, 10000, 10000, 10000, 10000, 10000, 10000, 10000, 10000, 10000}
+        );
+        TradeStylePrediction pred = predictor.predictTradeStyle("TEST", series, config, null, scalers);
+        assertTrue(pred.signalStrength > 0.9 || pred.signalStrength < -0.9);
+        assertTrue(pred.percentileThreshold > 0.9 || pred.percentileThreshold < 0.1);
+    }
+
+    @Test
+    void testContrarianReasonFilled() {
+        BarSeries series = createSeries(
+                new double[]{100, 99, 98, 97, 96, 95, 94, 93, 92, 91, 90},
+                new double[]{1000, 1000, 1000, 1000, 1000, 1000, 1000, 1000, 1000, 1000, 1000}
+        );
+        TradeStylePrediction pred = predictor.predictTradeStyle("TEST", series, config, null, scalers);
+        if (pred.contrarianAdjusted) {
+            assertNotNull(pred.contrarianReason);
+            assertFalse(pred.contrarianReason.isEmpty());
+        }
+    }
+
+    @Test
+    void testRsiAndVolumeFilters() {
+        BarSeries series = createSeries(
+                new double[]{100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110},
+                new double[]{1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0.1} // dernier volume faible pour activer le filtrage
+        );
+        TradeStylePrediction pred = predictor.predictTradeStyle("TEST", series, config, null, scalers);
+        assertTrue(pred.volumeFiltered);
+        // Simule RSI extrême
+        config.setRsiOverboughtLimit(10);
+        TradeStylePrediction pred2 = predictor.predictTradeStyle("TEST", series, config, null, scalers);
+        assertTrue(pred2.rsiFiltered);
+    }
+
+    @Test
+    void testModelReconstructionComment() {
+        // Cas où le modèle ou les scalers sont nuls
+        BarSeries series = createSeries(
+                new double[]{100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110},
+                new double[]{1000, 1000, 1000, 1000, 1000, 1000, 1000, 1000, 1000, 1000, 1000}
+        );
+        TradeStylePrediction pred = predictor.predictTradeStyle("TEST", series, config, null, null);
+        String comment = pred.comment != null ? pred.comment.toLowerCase() : "";
+        assertTrue(
+            comment.contains("modèle") &&
+            (comment.contains("reconstruit") || comment.contains("initialisation") || comment.contains("null"))
+        );
     }
 }
